// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden parcels — deterministic KPI regression > SA solve (30 iterations) is stable: l-shape-120 1`] = `
{
  "adaStalls": 5,
  "buildings": 2,
  "builtSF": 86300,
  "compliant": true,
  "coveragePct": 20.8,
  "evStalls": 10,
  "far": 1.25,
  "openSpacePct": 39.5,
  "score": 0.717,
  "stalls": 100,
  "stallsRequired": 90,
  "units": 90,
}
`;

exports[`golden parcels — deterministic KPI regression > SA solve (30 iterations) is stable: large-block-220x160 1`] = `
{
  "adaStalls": 20,
  "buildings": 8,
  "builtSF": 337800,
  "compliant": true,
  "coveragePct": 22.8,
  "evStalls": 39,
  "far": 1.37,
  "openSpacePct": 40.9,
  "score": 0.559,
  "stalls": 386,
  "stallsRequired": 350,
  "units": 350,
}
`;

exports[`golden parcels — deterministic KPI regression > SA solve (30 iterations) is stable: mid-rect-80x60 1`] = `
{
  "adaStalls": 2,
  "buildings": 1,
  "builtSF": 29600,
  "compliant": true,
  "coveragePct": 14.6,
  "evStalls": 4,
  "far": 0.88,
  "openSpacePct": 47.7,
  "score": 0.649,
  "stalls": 33,
  "stallsRequired": 30,
  "units": 30,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: l-shape-120 1`] = `
{
  "adaStalls": 5,
  "buildings": 2,
  "builtSF": 86300,
  "compliant": true,
  "coveragePct": 20.8,
  "evStalls": 10,
  "far": 1.25,
  "openSpacePct": 39.5,
  "score": 0.717,
  "stalls": 100,
  "stallsRequired": 90,
  "units": 90,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: large-block-220x160 1`] = `
{
  "adaStalls": 22,
  "buildings": 8,
  "builtSF": 375600,
  "compliant": true,
  "coveragePct": 25.3,
  "evStalls": 44,
  "far": 1.52,
  "openSpacePct": 31.6,
  "score": 0.537,
  "stalls": 432,
  "stallsRequired": 392,
  "units": 392,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: mid-rect-80x60 1`] = `
{
  "adaStalls": 3,
  "buildings": 1,
  "builtSF": 47000,
  "compliant": true,
  "coveragePct": 23.2,
  "evStalls": 6,
  "far": 1.39,
  "openSpacePct": 30.4,
  "score": 0.553,
  "stalls": 54,
  "stallsRequired": 49,
  "units": 49,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: narrow-deep-40x140 1`] = `
{
  "adaStalls": 3,
  "buildings": 1,
  "builtSF": 47000,
  "compliant": true,
  "coveragePct": 19.9,
  "evStalls": 6,
  "far": 1.19,
  "openSpacePct": 13.3,
  "score": 0.708,
  "stalls": 54,
  "stallsRequired": 49,
  "units": 49,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: small-infill-30x35 1`] = `
{
  "adaStalls": 1,
  "buildings": 1,
  "builtSF": 12700,
  "compliant": true,
  "coveragePct": 57.5,
  "evStalls": 2,
  "far": 1.72,
  "openSpacePct": 17.6,
  "score": 0.441,
  "stalls": 15,
  "stallsRequired": 13,
  "units": 13,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: trapezoid-140 1`] = `
{
  "adaStalls": 6,
  "buildings": 2,
  "builtSF": 93900,
  "compliant": true,
  "coveragePct": 22,
  "evStalls": 11,
  "far": 1.32,
  "openSpacePct": 44.3,
  "score": 0.564,
  "stalls": 108,
  "stallsRequired": 98,
  "units": 98,
}
`;

exports[`golden parcels — deterministic KPI regression > constructive solve is stable: wide-shallow-160x40 1`] = `
{
  "adaStalls": 3,
  "buildings": 1,
  "builtSF": 47000,
  "compliant": true,
  "coveragePct": 17.4,
  "evStalls": 6,
  "far": 1.05,
  "openSpacePct": 51.6,
  "score": 0.68,
  "stalls": 54,
  "stallsRequired": 49,
  "units": 49,
}
`;
